--- a/src/main/resources/templates/home.mustache
+++ b/src/main/resources/templates/home.mustache
@@ -1,13 +1,36 @@
 <html>
 <body>
+
+<a href="/">All</a>
+<a href="/?category=Furniture">Furniture</a>
+<a href="/?category=Alcohol">Alcohol</a>
+<a href="/?category=Toiletries">Toiletries</a>
+<a href="/?category=Shoes">Shoes</a>
+<a href="/?category=Food">Food</a>
+<a href="/?category=Jewelry">Jewelry</a>
+
+
 <table border = "1">
     <tr>
+        <th>Name</th>
+        <th>Email</th>
         <th>Category</th>
         <th>Credit Card#</th>
         <th>CVV</th>
         <th>Date</th>
     </tr>
-{{#purchases}}
+    {{#customers}}
+    <tr>
+        <td>
+            {{name}}
+        </td>
+        <td>
+            {{email}}
+        </td>
+    </tr>
+    {{/customers}}
+
+    {{#purchases}}
     <tr>
         <td>
             {{category}}
@@ -22,7 +45,8 @@
             {{date}}
         </td>
     </tr>
-{{/purchases}}
+    {{/purchases}}
+
 </table>
 </body>
 </html>
